# yume-pdq

./: .gitmodules  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  TECHNICAL.md  binary_usage.md  build.rs  cbindgen.toml  clippy.toml  deny.toml  index.html
.cargo/: config.toml
.github/workflows/: build.yml  macos.yml  test.yml  web.yaml
assets/: index-BONSCY-3.css  index-Bsq4Tktb.js  index-CBRI1PnK.js  index-CGLkLGuB.js  index-CPL_hSPM.js  index-CmsYXq7S.js  index-DNeBFngY.js  index-DZhsBEfQ.js  index-DtQ8c_bj.js  index-DvcmOyGq.js  index-anbJJKmK.js  index-ybVlnGWe.js  yume_pdq_bg-2qYeXgy-.wasm  yume_pdq_bg-B_Q640wO.wasm  yume_pdq_bg-CnFyosPo.wasm  yume_pdq_bg-CpNhDxOd.wasm  yume_pdq_bg-D1JmOJTe.wasm  yume_pdq_bg-DisaBbwC.wasm  yume_pdq_bg-DrhjFRNT.wasm  yume_pdq_bg-DzqF7GA4.wasm  yume_pdq_bg-gvPgi89H.wasm
bench-plot/: bench.csv  bench_parallel.csv  pixi.toml  plot.R  plot_parallel.R
benches/: matcher.rs  pdq.rs
crates/yume-pdq-recall-bench/: Cargo.toml  README.md  build.rs  official_binding.cpp
crates/yume-pdq-recall-bench/src/: lib.rs
examples/: end_to_end.rs  vulkan.rs
fnr-rest/: log.txt
fnr-test/: compliance.sh
include/: yume_pdq.h
integration/: dummy.c  hash.py
scripts/: dihedrals.sh
src/: alignment.rs  lib.rs  lut_utils.rs  main.rs  testing.rs  wasm.rs
src/kernel/: constants.rs  dihedral.rs  float128.rs  mod.rs  portable_simd.rs  ref.rs  router.rs  threshold.rs  type_traits.rs  x86.rs
src/matching/: mod.rs  vulkan.rs
step_by_step/: pixi.toml  plot.R
step_by_step/compress/avx2/: input.ppm  output.ppm
step_by_step/dct2d/avx2/round/: 0.ppm  1.ppm  10.ppm  11.ppm  12.ppm  13.ppm  14.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  9.ppm
step_by_step/quantize/avx2/: input.ppm  iter_0.ppm  iter_1.ppm  iter_2.ppm  iter_3.ppm  iter_4.ppm  iter_5.ppm  iter_6.ppm  iter_7.ppm  output.ppm
test-data/: aaa-orig.jpg.expect
web/: package.json
web/src/: app.css  app.tsx
web/src/components/: ImageEditor.tsx
