[package]
name = "yume-pdq"
version = "0.3.0"
edition = "2024"
authors = ["Yumechi <yume@yumechi.jp>"]
keywords = ["pdq", "perceptual", "NCMEC", "similarity"]
categories = ["no-std::no-alloc", "mathematics", "computer-vision", "multimedia::images", "multimedia::video"]
description = "A hand-vectorized implementation of the Facebook PDQ Perceptual Hash estimation algorithm that prioritizes low latency, high throughput with statistically low upper-bound false negative rate, with options of using AVX2 intrinsics, portable-simd, or AVX512 intrinsics, with no-std and LLVM SafeStack+CFI hardening support."
license = "Apache-2.0"
repository = "https://github.com/eternal-flame-AD/yume-pdq"
build = "build.rs"
exclude= [
    "test-data/*",
    ".vscode/*",
    "bench-plot/*",
    "step_by_step/*",
    "pipeline_overview.png",
]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
const-default = "1"
generic-array = { version = "1.2", features = ["const-default"] }
num-traits = { version = "0.2", default-features = false }
rug = { version = "1.27", optional = true }
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage"], optional = true }
rand = { version = "0.9", optional = true, default-features = false, features = ["small_rng"] }
core_affinity = { version = "0.8", optional = true }

[build-dependencies]
rug = "1.27"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
image = "0.25"
pdqhash = "0.1.1"
rand = "0.9"
rayon = "1.10"
rug = "1.27"

[[bench]]
name = "pdq"
harness = false

[profile.release]
lto = true

[profile.release-no-lto]
inherits = "release"
lto = false

[features]
default = ["std"]
std = []
avx512 = []
ffi = ["std"]
reference-rug = ["std", "dep:rug"]
unstable = []
portable-simd = []
portable-simd-fma = ["portable-simd", "std"]
prefer-x86-intrinsics = []
lut-utils = []
cli = ["std", "dep:clap", "dep:rand", "lut-utils"]
hpc = ["std", "dep:core_affinity"]

[[bin]]
name = "yume-pdq"
path = "src/main.rs"
required-features = ["cli"]
