[package]
name = "yume-pdq"
version = "1.0.0-alpha.1"
edition = "2024"
authors = ["Yumechi <yume@yumechi.jp>"]
keywords = ["pdq", "perceptual", "NCMEC", "similarity"]
categories = ["no-std::no-alloc", "mathematics", "computer-vision", "multimedia::images", "multimedia::video"]
description = "Optimized kernels from hashing to vectorized or Vulkan shader-based exact matching for near real-time high-throughput high-recall PDQ-based image screening, including a hand-vectorized PDQ variant that prioritizes low latency, high throughput with high statistical compatibility, with options of using AVX2 intrinsics, portable-simd, or AVX512 intrinsics, with no-std and LLVM SafeStack+CFI hardening support."
license = "Apache-2.0"
repository = "https://github.com/eternal-flame-AD/yume-pdq"
build = "build.rs"
exclude= [
    "test-data/*",
    ".vscode/*",
    "bench-plot/*",
    "step_by_step/*",
    "pipeline_overview.png",
]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"], default-features = false, optional = true }
wgpu = { version = "25", optional = true, default-features = false, features = ["vulkan", "wgsl"] }
pollster = { version = "0.4", optional = true }
const-default = "1"
generic-array = { version = "1.2", features = ["const-default"] }
num-traits = { version = "0.2", default-features = false }
rug = { version = "1.27", optional = true }
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage"], optional = true }
core_affinity = { version = "0.8", optional = true }
wasm-bindgen = { version = "0.2", optional = true, default-features = false, features = ["msrv", "rustversion"] }
js-sys = { version = "0.3", optional = true }

[build-dependencies]
rug = "1.27"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
image = { version = "0.25", features = ["png", "jpeg"], default-features = false }
pdqhash = "0.1.1"
rand = "0.9"
rayon = "1.10"
rug = "1.27"

[[bench]]
name = "pdq"
harness = false

[[bench]]
name = "matcher"
harness = false

[[example]]
name = "end_to_end"
path = "examples/end_to_end.rs"
required-features = ["alloc"]

[[example]]
name = "vulkan"
path = "examples/vulkan.rs"
required-features = ["vulkan"]

[profile.release]
codegen-units = 1
lto = true

[profile.release-no-lto]
inherits = "release"
lto = false

[features]
default = ["std"]
alloc = ["generic-array/alloc"]
std = ["alloc"]
avx512 = []
ffi = ["std"]
vulkan = ["dep:wgpu", "dep:pollster", "std"]
reference-rug = ["std", "dep:rug"]
unstable = []
portable-simd = []
portable-simd-fma = ["portable-simd", "std"]
prefer-x86-intrinsics = []
cli = ["std", "dep:clap"]
cli-bench = ["cli", "dep:criterion"]
hpc = ["std", "dep:core_affinity"]
wasm-bindgen = ["dep:wasm-bindgen", "js-sys"]

[[bin]]
name = "yume-pdq"
path = "src/main.rs"
required-features = ["cli"]
